# AquaSafe

./: PROJECT_BRIEF.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/core/: model_loader.py  predictor.py  schema.py
app/ui/: input_form.py  output_view.py  sidebar.py
app/utils/: validators.py
data/: NWMP_August2025_MPCB_0.csv
data/processed/: feature_registry.json  feature_registry_v1.json
data/processed/csv/: cleaned_water_quality.csv  cleaned_water_quality_data.csv  nwmp_features_v1.csv  test.csv  train.csv
data/processed/parquet/: cleaned_water_quality.parquet  cleaned_water_quality_data.parquet  nwmp_features_v1.parquet  test.parquet  train.parquet
docs/: EDA_DOCUMENTATION.md
models/: categorical_imputer.pkl  feature_names.pkl  label_encoder.pkl  logisticregression_pipeline.pkl  numeric_imputer.pkl  onehot_encoder.pkl  randomforest_pipeline.pkl  xgboost_pipeline.pkl
notebooks/: 01_eda.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_evaluation.html  05_model_evaluation.ipynb
summaries/: overview.py
utils/: config.py
