[project]
name = "aquasafe"
version = "0.1.0"
description = "AquaSafe is an ML-powered water quality classification system built using government monitoring data to support public health and environmental decision-making."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]
