[project]
name = "aquasafe"
version = "0.1.0"
description = "AquaSafe is an ML-powered water quality classification system built using government monitoring data to support public health and environmental decision-making."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "streamlit>=1.53.1",
    "xgboost>=3.1.3",
]

[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "models"]
